Fixing z-indexing problem

--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -47,6 +47,7 @@
 		width: 100%;
 		height: 116px;
 		background-color: rgba(255, 255, 255, .92);
+		z-index: 1100;
 
 		@include respond-min($break_tablet)
 		{
